einstellung_derive/src/snapshots/einstellung_derive__tests__basic_invalid.snap
---
source: src/tests.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct ServerConfig(u16);
/// --- output ---
::core::compile_error! {
    "Unsupported shape `one unnamed field`. Expected named fields."
}
