einstellung_derive/src/snapshots/einstellung_derive__tests__basic_struct.snap
---
source: src/tests.rs
expression: formatted
---
struct BasicConfig {
    host: String,
    port: u16,
}
impl einstellung::Config for BasicConfig {
    fn metadata() -> &'static einstellung::ConfigMetadata {}
    fn load(
        source: &dyn einstellung::ConfigSource,
    ) -> Result<Self, einstellung::ConfigError> {}
}
