einstellung_derive/src/snapshots/einstellung_derive__tests__collection_fields.snap
---
source: src/tests.rs
expression: formatted
---
struct CollectionConfig {
    servers: Vec<String>,
    retries: Vec<u32>,
}
impl einstellung::Config for CollectionConfig {
    fn metadata() -> &'static einstellung::ConfigMetadata {}
    fn load(
        source: &dyn einstellung::ConfigSource,
    ) -> Result<Self, einstellung::ConfigError> {}
}
