einstellung_derive/src/snapshots/einstellung_derive__tests__empty_struct.snap
---
source: src/tests.rs
expression: formatted
---
struct EmptyConfig {}
impl einstellung::Config for EmptyConfig {
    fn metadata() -> &'static einstellung::ConfigMetadata {}
    fn load(
        source: &dyn einstellung::ConfigSource,
    ) -> Result<Self, einstellung::ConfigError> {}
}
