einstellung_derive/src/snapshots/einstellung_derive__tests__invalid_merge2.snap
---
source: src/tests.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct ServerConfig {
    host: String,
    port: u16,
    #[config(merge = "subconfig")]
    is_active: bool,
}
/// --- output ---
::core::compile_error! {
    "Unknown value: `subconfig`. Did you mean `subconfig`?"
}
