einstellung_derive/src/snapshots/einstellung_derive__tests__kitchen_sink.snap
---
source: src/tests.rs
expression: formatted
---
/// --- input ---
#[derive(Config)]
struct FullSystemConfig {
    #[serde(rename = "sys_name")]
    #[config(default = "\"production\".to_string()")]
    name: String,
    #[config(validate = "validate_system_port")]
    port: u16,
    #[config(subconfig)]
    database: DatabaseConfig,
    #[config(merge = "append")]
    #[serde(alias = "files")]
    log_files: Option<Vec<String>>,
    #[config(subconfig)]
    optional_cache: Option<CacheConfig>,
}
/// --- output ---
#[derive(Default, Debug, serde::Deserialize)]
pub struct FullSystemConfigPartial {
    #[serde(rename = "sys_name")]
    pub name: Option<String>,
    pub port: Option<u16>,
    pub database: Option<<DatabaseConfig as einstellung::Config>::Partial>,
    #[serde(alias = "files")]
    pub log_files: Option<Vec<String>>,
    pub optional_cache: Option<<CacheConfig as einstellung::Config>::Partial>,
}
impl einstellung::PartialConfig for FullSystemConfigPartial {
    type Output = FullSystemConfig;
    fn merge(self, next: Self) -> Self {
        Self {
            name: next.name.or(self.name),
            port: next.port.or(self.port),
            database: match (self.database, next.database) {
                (Some(a), Some(b)) => einstellung::PartialConfig::merge(a, b),
                (a, b) => a.or(b),
            },
            log_files: match (self.log_files, next.log_files) {
                (Some(mut a), Some(b)) => {
                    a.extend(b);
                    Some(a)
                }
                (a, b) => a.or(b),
            },
            optional_cache: match (self.optional_cache, next.optional_cache) {
                (Some(a), Some(b)) => einstellung::PartialConfig::merge(a, b),
                (a, b) => a.or(b),
            },
        }
    }
    fn build(self) -> Result<Self::Output, einstellung::ConfigError> {
        let name = self.name.unwrap_or_else(|| "production".to_string());
        let port = self.port.ok_or(einstellung::ConfigError::MissingField("port"))?;
        if let Err(e) = validate_system_port(&port) {
            return Err(einstellung::ConfigError::Validation {
                field: "port",
                reason: e.to_string(),
            });
        }
        let database = self.database.unwrap_or_default().build()?;
        let log_files = self.log_files;
        let optional_cache = self
            .optional_cache
            .map(einstellung::PartialConfig::build)
            .transpose()?;
        Ok(FullSystemConfig {
            name,
            port,
            database,
            log_files,
            optional_cache,
        })
    }
}
impl einstellung::Config for FullSystemConfig {
    type Partial = FullSystemConfigPartial;
}

// ---------------------------------
/// --- input ---
#[derive(Config)]
struct DatabaseConfig {
    url: String,
    #[config(default = "5432")]
    port: u16,
}
/// --- output ---
#[derive(Default, Debug, serde::Deserialize)]
pub struct DatabaseConfigPartial {
    pub url: Option<String>,
    pub port: Option<u16>,
}
impl einstellung::PartialConfig for DatabaseConfigPartial {
    type Output = DatabaseConfig;
    fn merge(self, next: Self) -> Self {
        Self {
            url: next.url.or(self.url),
            port: next.port.or(self.port),
        }
    }
    fn build(self) -> Result<Self::Output, einstellung::ConfigError> {
        let url = self.url.ok_or(einstellung::ConfigError::MissingField("url"))?;
        let port = self.port.unwrap_or(5432);
        Ok(DatabaseConfig { url, port })
    }
}
impl einstellung::Config for DatabaseConfig {
    type Partial = DatabaseConfigPartial;
}

// ---------------------------------
/// --- input ---
#[derive(Config)]
struct CacheConfig {
    #[config(default = "1024")]
    size_mb: u32,
}
/// --- output ---
#[derive(Default, Debug, serde::Deserialize)]
pub struct CacheConfigPartial {
    pub size_mb: Option<u32>,
}
impl einstellung::PartialConfig for CacheConfigPartial {
    type Output = CacheConfig;
    fn merge(self, next: Self) -> Self {
        Self {
            size_mb: next.size_mb.or(self.size_mb),
        }
    }
    fn build(self) -> Result<Self::Output, einstellung::ConfigError> {
        let size_mb = self.size_mb.unwrap_or(1024);
        Ok(CacheConfig { size_mb })
    }
}
impl einstellung::Config for CacheConfig {
    type Partial = CacheConfigPartial;
}
